// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`debts.add > functionality > auto-accepted by the counterparty > counterparty's debt did exist before - picked by receipt id & owner account id 1`] = `
{
  "added": {
    "debts": {
      "id:4ec29874-1171-46f4-b7f7-c38480a395f8|ownerAccountId:85c88615-9694-4369-8d01-51fb546f823a": {
        "amount": "-833.7600",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "GIP",
        "id": "4ec29874-1171-46f4-b7f7-c38480a395f8",
        "note": "cognatus aureus vilicus",
        "ownerAccountId": "85c88615-9694-4369-8d01-51fb546f823a",
        "receiptId": "2001d56e-28dc-44ac-8559-ed8feced73d1",
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "8c8d3d7e-fa87-4c43-adb1-e7f0d106e5b6",
      },
    },
  },
  "updated": {
    "debts": {
      "id:4ec29874-1171-46f4-b7f7-c38480a395f8|ownerAccountId:71bb4e7a-2c9e-4b4c-bc09-5dc8fa0a264a": {
        "amount": "833.7600",
        "currencyCode": "GIP",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`debts.add > functionality > auto-accepted by the counterparty > counterparty's debt didn't exist before 1`] = `
{
  "added": {
    "debts": {
      "id:cfeee5e0-c00d-441c-95e9-a68a236e2198|ownerAccountId:b6e7cd07-7de7-402c-82aa-a67d0c5c8aa9": {
        "amount": "-322.8900",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "TMT",
        "id": "cfeee5e0-c00d-441c-95e9-a68a236e2198",
        "note": "carcer reprehenderit decet",
        "ownerAccountId": "b6e7cd07-7de7-402c-82aa-a67d0c5c8aa9",
        "receiptId": "ddad06df-d8e6-4bc5-8232-5fb508699a26",
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "fdc837ca-329e-4200-967f-80d10f65dce9",
      },
      "id:cfeee5e0-c00d-441c-95e9-a68a236e2198|ownerAccountId:f8b9b427-3a03-488e-bd6b-fa068fb24ffd": {
        "amount": "322.8900",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "TMT",
        "id": "cfeee5e0-c00d-441c-95e9-a68a236e2198",
        "note": "carcer reprehenderit decet",
        "ownerAccountId": "f8b9b427-3a03-488e-bd6b-fa068fb24ffd",
        "receiptId": "ddad06df-d8e6-4bc5-8232-5fb508699a26",
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "1e31106a-5d43-4bb0-9c84-3ad22e9829b0",
      },
    },
  },
}
`;

exports[`debts.add > functionality > debt is added - autogenerated timestamp 1`] = `
{
  "added": {
    "debts": {
      "id:32d843cd-be67-4e7d-b20b-618d7139b8fd|ownerAccountId:f0454ba9-b16d-4740-929d-60dfa7dd1840": {
        "amount": "-61.3400",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "JMD",
        "id": "32d843cd-be67-4e7d-b20b-618d7139b8fd",
        "note": "color vacuus depopulo",
        "ownerAccountId": "f0454ba9-b16d-4740-929d-60dfa7dd1840",
        "receiptId": null,
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "040b6d09-0d5e-452b-848a-24fbe2931c7f",
      },
    },
  },
}
`;

exports[`debts.add > functionality > debt is added - user-provided timestamp 1`] = `
{
  "added": {
    "debts": {
      "id:5d4f613e-12c2-401e-a70f-48771d87f81f|ownerAccountId:0ed44d42-6b66-4d53-9cab-5e22859b1aa2": {
        "amount": "-20.9900",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "DJF",
        "id": "5d4f613e-12c2-401e-a70f-48771d87f81f",
        "note": "verus odit ullam",
        "ownerAccountId": "0ed44d42-6b66-4d53-9cab-5e22859b1aa2",
        "receiptId": null,
        "timestamp": "2021-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "b676bb78-0708-4fc3-99ee-70ac5a7f0d33",
      },
    },
  },
}
`;

exports[`debts.add > functionality > multiple debts > for the same auto-accepting account 1`] = `
{
  "added": {
    "debts": {
      "id:69015449-49e5-4400-965f-073a1aaeb087|ownerAccountId:3b3aa95f-107e-4ed1-bea5-a9026df83791": {
        "amount": "-196.2400",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "SAR",
        "id": "69015449-49e5-4400-965f-073a1aaeb087",
        "note": "sum adhaero recusandae",
        "ownerAccountId": "3b3aa95f-107e-4ed1-bea5-a9026df83791",
        "receiptId": null,
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "476e7bb0-0c18-4ee3-a42d-2415a563380f",
      },
      "id:69015449-49e5-4400-965f-073a1aaeb087|ownerAccountId:b28d7544-8eca-4b72-9da0-d52d58e46cd6": {
        "amount": "196.2400",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "SAR",
        "id": "69015449-49e5-4400-965f-073a1aaeb087",
        "note": "sum adhaero recusandae",
        "ownerAccountId": "b28d7544-8eca-4b72-9da0-d52d58e46cd6",
        "receiptId": null,
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "d23c37c5-01af-4eb0-a228-88211b2dc396",
      },
      "id:ebe69342-2dc8-492d-b702-91f6b7a5673c|ownerAccountId:3b3aa95f-107e-4ed1-bea5-a9026df83791": {
        "amount": "648.2300",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "NPR",
        "id": "ebe69342-2dc8-492d-b702-91f6b7a5673c",
        "note": "capitulus statim agnitio",
        "ownerAccountId": "3b3aa95f-107e-4ed1-bea5-a9026df83791",
        "receiptId": null,
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "476e7bb0-0c18-4ee3-a42d-2415a563380f",
      },
      "id:ebe69342-2dc8-492d-b702-91f6b7a5673c|ownerAccountId:b28d7544-8eca-4b72-9da0-d52d58e46cd6": {
        "amount": "-648.2300",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "NPR",
        "id": "ebe69342-2dc8-492d-b702-91f6b7a5673c",
        "note": "capitulus statim agnitio",
        "ownerAccountId": "b28d7544-8eca-4b72-9da0-d52d58e46cd6",
        "receiptId": null,
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "d23c37c5-01af-4eb0-a228-88211b2dc396",
      },
      "id:ed349e98-d532-4023-a711-a6df3bbadd2c|ownerAccountId:3b3aa95f-107e-4ed1-bea5-a9026df83791": {
        "amount": "-468.1300",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "KYD",
        "id": "ed349e98-d532-4023-a711-a6df3bbadd2c",
        "note": "strues a infit",
        "ownerAccountId": "3b3aa95f-107e-4ed1-bea5-a9026df83791",
        "receiptId": null,
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "476e7bb0-0c18-4ee3-a42d-2415a563380f",
      },
      "id:ed349e98-d532-4023-a711-a6df3bbadd2c|ownerAccountId:b28d7544-8eca-4b72-9da0-d52d58e46cd6": {
        "amount": "468.1300",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "KYD",
        "id": "ed349e98-d532-4023-a711-a6df3bbadd2c",
        "note": "strues a infit",
        "ownerAccountId": "b28d7544-8eca-4b72-9da0-d52d58e46cd6",
        "receiptId": null,
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "d23c37c5-01af-4eb0-a228-88211b2dc396",
      },
    },
  },
}
`;

exports[`debts.add > functionality > multiple debts > some are auto-accepted by the counterparty 1`] = `
{
  "added": {
    "debts": {
      "id:238d48ae-ec9b-4df0-92b6-8c6871f65790|ownerAccountId:2acaf486-c501-448c-befd-d767e37d6e0f": {
        "amount": "462.9200",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "NIO",
        "id": "238d48ae-ec9b-4df0-92b6-8c6871f65790",
        "note": "vitae videlicet clam",
        "ownerAccountId": "2acaf486-c501-448c-befd-d767e37d6e0f",
        "receiptId": null,
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "98e77302-6096-455b-8404-efdd72f4e499",
      },
      "id:238d48ae-ec9b-4df0-92b6-8c6871f65790|ownerAccountId:90019f04-50fd-4e72-8a88-6dcf5157c17f": {
        "amount": "-462.9200",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "NIO",
        "id": "238d48ae-ec9b-4df0-92b6-8c6871f65790",
        "note": "vitae videlicet clam",
        "ownerAccountId": "90019f04-50fd-4e72-8a88-6dcf5157c17f",
        "receiptId": null,
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "6c023500-cf1a-429c-a666-51c28293437b",
      },
      "id:9f1c5b42-d2cc-40fb-b353-3a1d61a00dad|ownerAccountId:90019f04-50fd-4e72-8a88-6dcf5157c17f": {
        "amount": "364.6000",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "RON",
        "id": "9f1c5b42-d2cc-40fb-b353-3a1d61a00dad",
        "note": "qui termes atqui",
        "ownerAccountId": "90019f04-50fd-4e72-8a88-6dcf5157c17f",
        "receiptId": null,
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "7ceb6b74-b8ff-4409-88ea-d24ccf38d3cf",
      },
      "id:9f1c5b42-d2cc-40fb-b353-3a1d61a00dad|ownerAccountId:fa87e690-0720-4113-be21-ed7f6e908965": {
        "amount": "-364.6000",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "RON",
        "id": "9f1c5b42-d2cc-40fb-b353-3a1d61a00dad",
        "note": "qui termes atqui",
        "ownerAccountId": "fa87e690-0720-4113-be21-ed7f6e908965",
        "receiptId": null,
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "b94737b6-dd8b-4965-88a1-31f95cb716df",
      },
      "id:d0d5a79c-4684-42c6-9768-2c1dc90e5a41|ownerAccountId:90019f04-50fd-4e72-8a88-6dcf5157c17f": {
        "amount": "167.3600",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "UZS",
        "id": "d0d5a79c-4684-42c6-9768-2c1dc90e5a41",
        "note": "aestas certe thalassinus",
        "ownerAccountId": "90019f04-50fd-4e72-8a88-6dcf5157c17f",
        "receiptId": "4416355f-6b7c-4ca7-80d2-b9cfcca167c1",
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "7ceb6b74-b8ff-4409-88ea-d24ccf38d3cf",
      },
      "id:d0d5a79c-4684-42c6-9768-2c1dc90e5a41|ownerAccountId:fa87e690-0720-4113-be21-ed7f6e908965": {
        "amount": "-167.3600",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "UZS",
        "id": "d0d5a79c-4684-42c6-9768-2c1dc90e5a41",
        "note": "aestas certe thalassinus",
        "ownerAccountId": "fa87e690-0720-4113-be21-ed7f6e908965",
        "receiptId": "4416355f-6b7c-4ca7-80d2-b9cfcca167c1",
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "b94737b6-dd8b-4965-88a1-31f95cb716df",
      },
      "id:deb14f28-3fc9-4eec-9a03-e0e95cd79cfb|ownerAccountId:90019f04-50fd-4e72-8a88-6dcf5157c17f": {
        "amount": "-695.9000",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "HNL",
        "id": "deb14f28-3fc9-4eec-9a03-e0e95cd79cfb",
        "note": "amiculum bestia depulso",
        "ownerAccountId": "90019f04-50fd-4e72-8a88-6dcf5157c17f",
        "receiptId": null,
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "18ff71c7-3d1b-41d2-94eb-8774d4b4bbea",
      },
    },
  },
}
`;

exports[`debts.add > functionality > multiple debts > some auto-accepting accounts already had debts picked by the same receipt id 1`] = `
{
  "added": {
    "debts": {
      "id:67f0e8b6-6b6b-4611-9086-7aebae48a5e2|ownerAccountId:1412f34e-48c4-467a-9f54-3447a69ed1ad": {
        "amount": "493.5700",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "MAD",
        "id": "67f0e8b6-6b6b-4611-9086-7aebae48a5e2",
        "note": "amoveo ullam torrens",
        "ownerAccountId": "1412f34e-48c4-467a-9f54-3447a69ed1ad",
        "receiptId": null,
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "7dc3e8f6-c663-464b-8350-aff4a8084832",
      },
      "id:67f0e8b6-6b6b-4611-9086-7aebae48a5e2|ownerAccountId:2711a226-d6e8-4532-877d-ba4aebf8073f": {
        "amount": "-493.5700",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "MAD",
        "id": "67f0e8b6-6b6b-4611-9086-7aebae48a5e2",
        "note": "amoveo ullam torrens",
        "ownerAccountId": "2711a226-d6e8-4532-877d-ba4aebf8073f",
        "receiptId": null,
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "0f3b5e03-b3ab-4ba6-81db-382a4a33b69f",
      },
      "id:7679ed27-8404-4cc8-9714-57274d413473|ownerAccountId:1412f34e-48c4-467a-9f54-3447a69ed1ad": {
        "amount": "-340.3100",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "RSD",
        "id": "7679ed27-8404-4cc8-9714-57274d413473",
        "note": "fugit demitto thermae",
        "ownerAccountId": "1412f34e-48c4-467a-9f54-3447a69ed1ad",
        "receiptId": "3197c679-704d-4410-997f-f1ee0457fc4f",
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "7dc3e8f6-c663-464b-8350-aff4a8084832",
      },
      "id:cfb1e0c6-f08e-46cf-9bee-5dda6b2f38e6|ownerAccountId:1412f34e-48c4-467a-9f54-3447a69ed1ad": {
        "amount": "-400.5600",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "BZD",
        "id": "cfb1e0c6-f08e-46cf-9bee-5dda6b2f38e6",
        "note": "thymum tempora vinco",
        "ownerAccountId": "1412f34e-48c4-467a-9f54-3447a69ed1ad",
        "receiptId": null,
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "7dc3e8f6-c663-464b-8350-aff4a8084832",
      },
      "id:cfb1e0c6-f08e-46cf-9bee-5dda6b2f38e6|ownerAccountId:2711a226-d6e8-4532-877d-ba4aebf8073f": {
        "amount": "400.5600",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "BZD",
        "id": "cfb1e0c6-f08e-46cf-9bee-5dda6b2f38e6",
        "note": "thymum tempora vinco",
        "ownerAccountId": "2711a226-d6e8-4532-877d-ba4aebf8073f",
        "receiptId": null,
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "0f3b5e03-b3ab-4ba6-81db-382a4a33b69f",
      },
    },
  },
  "updated": {
    "debts": {
      "id:7679ed27-8404-4cc8-9714-57274d413473|ownerAccountId:2711a226-d6e8-4532-877d-ba4aebf8073f": {
        "amount": "340.3100",
        "currencyCode": "RSD",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`debts.add > input verification > mixed success and fail 1`] = `
{
  "added": {
    "debts": {
      "id:bb9c6125-1c9a-40c3-bb1f-7e6c4e870372|ownerAccountId:1d263b1a-801e-44e4-a018-32c2cbc9f60e": {
        "amount": "-535.2300",
        "createdAt": "2020-01-01 00:00:00+00",
        "currencyCode": "MUR",
        "id": "bb9c6125-1c9a-40c3-bb1f-7e6c4e870372",
        "note": "creber cometes alias",
        "ownerAccountId": "1d263b1a-801e-44e4-a018-32c2cbc9f60e",
        "receiptId": null,
        "timestamp": "2020-01-01",
        "updatedAt": "2020-01-01 00:00:00+00",
        "userId": "8de070d3-b416-4c09-9fa4-81f293c86ae0",
      },
    },
  },
}
`;
